templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: replace_ingress_name
  namespace: replace_namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400, 401, 403, 404, 500, 503"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
      location /metrics {
        deny all;
        return 401;
      }
    external-dns.alpha.kubernetes.io/set-identifier: replace_service_slug-ingress-replace_namespace-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
      - replace_hostname
      secretName: tls-certificate
  rules:
  - host: replace_hostname
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: replace_service_name
            port:
              number: replace_container_port
